[gd_scene load_steps=36 format=3 uid="uid://bfn5tr5vhw6pc"]

[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_rkrus"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/States.gd" id="2_2lfcb"]
[ext_resource type="Texture2D" uid="uid://dllnpn0kui55c" path="res://Entity/Player/Resources/Willbur 1 Handed.png" id="2_rtb4y"]
[ext_resource type="Script" path="res://Componenets/HealthComponent.gd" id="2_u2kwo"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/Camera.gd" id="3_dn54q"]
[ext_resource type="Script" path="res://Componenets/HitboxComponent.gd" id="4_2ub84"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/LockedState.gd" id="4_i7c05"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/GroundedState.gd" id="5_reuev"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/JumpState.gd" id="6_eikql"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/FallState.gd" id="7_o5byj"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/JumpTransition.gd" id="7_rmivu"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/DodgeState.gd" id="8_3fujk"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/PlayerState/SlideState.gd" id="9_5d8x5"]
[ext_resource type="FontFile" uid="uid://dff70lxnqdqgr" path="res://Resources/Pixellari (16px).ttf" id="11_kgipk"]
[ext_resource type="PackedScene" uid="uid://d11rv7fmryr4q" path="res://Entity/Player/Scripts/Weapons/BasicPistol/BasicPistol.tscn" id="12_hep7w"]
[ext_resource type="Script" path="res://Entity/Player/Scripts/Weapons/Weapon.gd" id="14_6a4g7"]
[ext_resource type="Script" path="res://Entity/Player/Scenes/BulletIndicator.gd" id="16_wgh4j"]
[ext_resource type="FontFile" uid="uid://dh680g3l1ytcg" path="res://Resources/pixelmix.ttf" id="18_ac6pb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rywi"]
size = Vector2(16, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_poqym"]
size = Vector2(16, 26.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnren"]
size = Vector2(16, 13)

[sub_resource type="Animation" id="Animation_l72vq"]
resource_name = "AirDodge"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox-Body/Body:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox-Head/Head:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1k8om"]
resource_name = "Die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_cu6i7"]
resource_name = "Duck"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pjaqi"]
resource_name = "Fall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lbehr"]
resource_name = "Idle"
length = 1.05
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jx561"]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ix4gh"]
resource_name = "Land"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oi7wd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBox-Body/Body:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBox-Head/Head:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lmhpx"]
resource_name = "Run"
length = 0.6
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qsxb7"]
resource_name = "Slide"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [48, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 35)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0.3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBox-Body/Body:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBox-Head/Head:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_x344b"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_657h8"]
_data = {
"AirDodge": SubResource("Animation_l72vq"),
"Die": SubResource("Animation_1k8om"),
"Duck": SubResource("Animation_cu6i7"),
"Fall": SubResource("Animation_pjaqi"),
"Idle": SubResource("Animation_lbehr"),
"JumpUp": SubResource("Animation_jx561"),
"Land": SubResource("Animation_ix4gh"),
"RESET": SubResource("Animation_oi7wd"),
"Run": SubResource("Animation_lmhpx"),
"Slide": SubResource("Animation_qsxb7"),
"Still": SubResource("Animation_x344b")
}

[sub_resource type="LabelSettings" id="LabelSettings_2mrr4"]
font = ExtResource("11_kgipk")
font_size = 20
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k51pt"]
font = ExtResource("18_ac6pb")
font_size = 8
shadow_size = 0

[node name="Player" type="CharacterBody2D"]
floor_snap_length = 10.0
script = ExtResource("1_rkrus")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_u2kwo")
MaxHealth = 10

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource("14_6a4g7")

[node name="BasicPistol" parent="Weapons" node_paths=PackedStringArray("Player") instance=ExtResource("12_hep7w")]
Player = NodePath("../..")
Ammo = 4
MaxAmmo = 10

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_rtb4y")
hframes = 8
vframes = 11

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_1rywi")

[node name="HurtBox-Body" type="Area2D" parent="."]
script = ExtResource("4_2ub84")

[node name="Body" type="CollisionShape2D" parent="HurtBox-Body"]
position = Vector2(0, 26.4375)
shape = SubResource("RectangleShape2D_poqym")
disabled = true
debug_color = Color(0.995937, 0, 0.196234, 0.42)

[node name="HurtBox-Head" type="Area2D" parent="."]
script = ExtResource("4_2ub84")

[node name="Head" type="CollisionShape2D" parent="HurtBox-Head"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_dnren")
disabled = true
debug_color = Color(0.995937, 0, 0.196234, 0.42)

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_657h8")
}

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position_smoothing_speed = 4.0
drag_left_margin = 0.05
drag_top_margin = 0.0
drag_right_margin = 0.05
drag_bottom_margin = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_dn54q")
target = NodePath("..")

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource("2_2lfcb")

[node name="Locked" type="Node" parent="PlayerStates"]
script = ExtResource("4_i7c05")

[node name="Grounded" type="Node" parent="PlayerStates"]
script = ExtResource("5_reuev")

[node name="Jump" type="Node" parent="PlayerStates"]
script = ExtResource("6_eikql")

[node name="JumpTransition" type="Node" parent="PlayerStates"]
script = ExtResource("7_rmivu")

[node name="Fall" type="Node" parent="PlayerStates"]
script = ExtResource("7_o5byj")

[node name="Dodge" type="Node" parent="PlayerStates"]
script = ExtResource("8_3fujk")

[node name="Slide" type="Node" parent="PlayerStates"]
script = ExtResource("9_5d8x5")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]

[node name="DebugDisplay" type="CanvasLayer" parent="."]

[node name="StateLabel" type="Label" parent="DebugDisplay"]
anchors_preset = -1
anchor_top = -0.095
anchor_bottom = -0.095
offset_left = 8.0
offset_top = 59.3
offset_right = 301.0
offset_bottom = 95.3
text = "STATE"
label_settings = SubResource("LabelSettings_2mrr4")
vertical_alignment = 1
uppercase = true

[node name="AnimationLabel" type="Label" parent="DebugDisplay"]
anchors_preset = -1
anchor_top = -0.095
anchor_bottom = -0.095
offset_left = 8.0
offset_top = 83.3
offset_right = 301.0
offset_bottom = 119.3
text = "ANIMATION"
label_settings = SubResource("LabelSettings_2mrr4")
vertical_alignment = 1
uppercase = true

[node name="BulletIndicator" type="Node2D" parent="." node_paths=PackedStringArray("Player", "Weapons")]
position = Vector2(0, -12)
script = ExtResource("16_wgh4j")
Player = NodePath("..")
Weapons = NodePath("../Weapons")

[node name="Label" type="Label" parent="BulletIndicator"]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = -7.0
text = "WEAPON"
label_settings = SubResource("LabelSettings_k51pt")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="animation_finished" from="Animator" to="PlayerStates/Dodge" method="_on_animator_animation_finished"]
[connection signal="animation_finished" from="Animator" to="PlayerStates/Slide" method="_on_animator_animation_finished"]
